--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.209" />
 
     <EditText
-        android:id="@+id/EditTextCall"
+        android:id="@+id/editTextCall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
@@ -39,7 +39,7 @@
         android:text="@string/callBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditTextCall" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextCall" />
 
     <TextView
         android:id="@+id/text3"
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnCall" />
 
     <EditText
-        android:id="@+id/EditTextSMS"
+        android:id="@+id/editTextSMS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
@@ -71,7 +71,7 @@
         android:layout_marginStart="33dp"
         android:layout_marginTop="26dp"
         android:text="@string/smsBtn"
-        app:layout_constraintStart_toStartOf="@+id/EditTextSMS"
-        app:layout_constraintTop_toBottomOf="@+id/EditTextSMS" />
+        app:layout_constraintStart_toStartOf="@+id/editTextSMS"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSMS" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
